--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
       "@mui/material": "^5.10.6",
       "@mui/styles": "^5.10.6",
       "@paypal/react-paypal-js": "^7.8.1",
-      "@reduxjs/toolkit": "^1.8.3",
       "@testing-library/jest-dom": "^5.16.4",
       "@testing-library/react": "^13.2.0",
       "@testing-library/user-event": "^13.5.0",
@@ -31,19 +30,15 @@
       "react-helmet": "^6.1.0",
       "react-icons": "^4.6.0",
       "react-paypal-button-v2": "^2.6.3",
-      "react-redux": "^8.0.2",
       "react-router-bootstrap": "^0.26.1",
       "react-router-dom": "^6.3.0",
       "react-scripts": "5.0.1",
-      "redux": "^4.2.0",
-      "redux-devtools-extension": "^2.13.9",
-      "redux-thunk": "^2.4.1",
       "state-pool": "^0.9.0",
       "web-vitals": "^2.1.4"
    },
    "scripts": {
       "start": "env-cmd react-scripts start",
-      "build": "react-scripts build",
+      "build": "env-cmd react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
    },
