--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
       "react-router-bootstrap": "^0.26.1",
       "react-router-dom": "^6.3.0",
       "react-scripts": "5.0.1",
+      "source-map-explorer": "^2.5.3",
       "state-pool": "^0.9.0",
       "web-vitals": "^2.1.4"
    },
    "scripts": {
+      "analyze": "source-map-explorer 'build/static/js/*.js'",
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
